--- a/catalog/view/theme/default/template/checkout/checkout.twig
+++ b/catalog/view/theme/default/template/checkout/checkout.twig
@@ -57,7 +57,7 @@
             <div class="panel-body"></div>
           </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel panel-default" style="display: none;">
           <div class="panel-heading">
             <h4 class="panel-title">{{ text_checkout_shipping_method }}</h4>
           </div>
@@ -508,6 +508,7 @@ $(document).delegate('#button-shipping-address', 'click', function() {
                         alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
                     }
                 }).done(function() {
+                $('#button-shipping-method').click();
 					$.ajax({
 						url: 'index.php?route=checkout/payment_address',
 						dataType: 'html',
@@ -579,6 +580,7 @@ $(document).delegate('#button-guest', 'click', function() {
                                 url: 'index.php?route=checkout/guest_shipping',
                                 dataType: 'html',
                                 success: function(html) {
+                                    $('#button-shipping-method').click();
                                     $('#collapse-shipping-address .panel-body').html(html);
 
 									$('#collapse-shipping-address').parent().find('.panel-heading .panel-title').html('<a href="#collapse-shipping-address" data-toggle="collapse" data-parent="#accordion" class="accordion-toggle">{{ text_checkout_shipping_address }} <i class="fa fa-caret-down"></i></a>');
@@ -696,6 +698,7 @@ $(document).delegate('#button-guest-shipping', 'click', function() {
                         $('#button-guest-shipping').button('reset');
                     },
                     success: function(html) {
+                        $('#button-shipping-method').click();
                         $('#collapse-shipping-method .panel-body').html(html);
 
 						$('#collapse-shipping-method').parent().find('.panel-heading .panel-title').html('<a href="#collapse-shipping-method" data-toggle="collapse" data-parent="#accordion" class="accordion-toggle">{{ text_checkout_shipping_method }} <i class="fa fa-caret-down"></i>');
