--- a/catalog/view/theme/default/template/checkout/guest.twig
+++ b/catalog/view/theme/default/template/checkout/guest.twig
@@ -152,8 +152,8 @@
     <fieldset id="address">
       <legend>{{ text_your_address }}</legend>
       <div class="form-group">
-        <label class="control-label" for="input-payment-company">{{ entry_company }}</label>
-        <input type="text" name="company" value="{{ company }}" placeholder="{{ entry_company }}" id="input-payment-company" class="form-control" />
+        <label class="control-label" for="input-payment-company" style="display: none;">{{ entry_company }}</label>
+        <input type="text" name="company" value="{{ company }}" placeholder="{{ entry_company }}" id="input-payment-company" style="display: none;" class="form-control" />
       </div>
       <div class="form-group required">
         <label class="control-label" for="input-payment-address-1">{{ entry_address_1 }}</label>
