--- a/catalog/view/theme/default/template/checkout/shipping_address.twig
+++ b/catalog/view/theme/default/template/checkout/shipping_address.twig
@@ -37,9 +37,9 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="input-shipping-company">{{ entry_company }}</label>
+      <label class="col-sm-2 control-label" for="input-shipping-company" style="display: none;">{{ entry_company }}</label>
       <div class="col-sm-10">
-        <input type="text" name="company" value="" placeholder="{{ entry_company }}" id="input-shipping-company" class="form-control" />
+        <input type="text" name="company" value="12345" placeholder="{{ entry_company }}" id="input-shipping-company" style="display: none;" class="form-control" />
       </div>
     </div>
     <div class="form-group required">
